# securnote

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.ssh  EDITOR_GUIDE.md  MONITORING.md  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  install.sh  pyproject.toml  quick-start.sh  run_admin.py  run_web.py  test_crl.py  test_integration.py  test_pki.py  test_suite.py  test_zkauth.py
grafana/provisioning/dashboards/: dashboard.yml
prometheus/: prometheus.yml
scripts/: connect_remote.sh  demo.py  run_admin.py  run_web.py  server_setup.sh  ssh_server_start.sh  start_metrics.py
securnote/: __init__.py  __main__.py  activity_logger.py  application.py  auth.py  cli.py  crypto.py  exceptions.py  logging_config.py  metrics.py  models.py  remote_cli.py  repository.py  services.py  storage.py  zkauth.py
securnote/web/: admin.py  app.py  main.py
tests/: conftest.py  test_admin.py  test_auth.py  test_basic.py  test_crypto.py  test_integration.py  test_storage.py  test_suite.py
