[project]
name = "securnote"
version = "0.1.0"
description = "Cryptography project for educational purposes"
authors = [
    {name = "emreren"}
]
readme = "README.md"
requires-python = ">3.9.1,<4.0"
dependencies = [
    "cryptography (>=45.0.7,<46.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
