[project]
name = "securnote"
version = "0.1.0"
description = "Cryptography project for educational purposes"
authors = [
    {name = "emreren"}
]
readme = "README.md"
requires-python = ">3.9.1,<4.0"
dependencies = [
    "cryptography (>=45.0.7,<46.0.0)"
]

[project.scripts]
securnote = "securnote.__main__:main"
securnote-remote = "securnote.remote_cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
